--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "dayjs": "^1.8.35",
+    "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-redux": "^7.2.1",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "3.4.3"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
