--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "dayjs": "^1.8.35",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-redux": "^7.2.1",
