Add Delete category

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sweetalert2": "^10.3.5",
+    "sweetalert2-react-content": "^3.2.0",
     "yup": "^0.29.3"
   },
   "scripts": {
