--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "dayjs": "^1.8.35",
+    "exceljs": "^4.1.1",
+    "file-saver": "^2.0.2",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
