--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
+    "materialui-daterange-picker": "^1.1.92",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
